# xsecurelock

./: .clang-format  .clang-tidy  .gitignore  Doxyfile.in  Makefile.am  README.md  auth_child.c  auth_child.h  autogen.sh  blanking.c  blanking.h  buf_util.h  build-config.h.in  build-release.sh  configure.ac  configured_command.c  configured_command.h  ensure-documented-settings.sh  env_info.c  env_info.h  env_settings.c  env_settings.h  generate-version-c.sh  grabs.c  grabs.h  io_util.h  keysym_config.c  keysym_config.h  lock_state.h  lock_windows.c  lock_windows.h  logging.c  logging.h  main.c  mlock_page.h  rect.c  rect.h  run-linters.sh  saver_child.c  saver_child.h  (+14 more)
doc/: xsecurelock.1.md
doc/examples/: logind_button_inhibit_lock  xfce_lock_command
helpers/: auth_draw.c  auth_draw.h  auth_prompt.c  auth_prompt.h  auth_title.c  auth_title.h  auth_ui.h  auth_ui_config.c  auth_ui_config.h  auth_ui_resources.c  auth_ui_resources.h  auth_windows.c  auth_windows.h  auth_x11.c  authproto.c  authproto.h  authproto_htpasswd.in  authproto_pam.c  authproto_pamtester.in  dimmer.c  dimmer_bayer.c  dimmer_bayer.h  dimmer_opacity.h  indicator_text.c  indicator_text.h  monitors.c  monitors.h  pgrp_placeholder.c  prompt_display.c  prompt_display.h  prompt_glyph.c  prompt_glyph.h  prompt_random.c  prompt_random.h  prompt_state.c  prompt_state.h  saver_blank  saver_mplayer.in  saver_mpv.in  saver_multiplex.c  (+4 more)
test/: auth_title_test.c  authproto_bounds_test.c  authproto_pam_flow_test.c  blanking_test.c  buf_util_test.c  cat_authproto.c  check-local.sh  configured_command_test.c  dimmer_bayer_test.c  dimmer_opacity_test.c  env_settings_test.c  explicit_bzero_test.c  fakeproto.py  get_compositor.c  indicator_text_test.c  keysym_config_test.c  mlock_page_overflow_test.c  mlock_page_test.c  nvidia_break_compositor.c  prompt_display_test.c  prompt_glyph_test.c  prompt_random_test.c  prompt_state_test.c  rect_test.c  retry_io_test.c  run-test.sh  run-tests.sh  saver-auth-open-notify-preexec.sh  saver-multiplex-restart-preexec.sh  saver_xscreensaver_smoke.sh  signal_pipe_test.c  test-authproto-static-info-advance.xdo  test-authproto-static-info-timeout.xdo  test-correct-password.xdo  test-global-saver-relative-override.xdo  test-saver-auth-open-notify.xdo  test-saver-multiplex-restarts.xdo  test-sigusr2-starts-auth.xdo  test-wrong-password.xdo  test-xss-activation-keeps-saver.xdo  (+5 more)
test/security/: pam_appl.h
